--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:           pretty
 
 # Setup
 title:               Henri's Mind
-tagline:             The Jekyll Butler
+tagline:             My thoughts on the world and some useful things I learn daily
 url:                 http://blog.tremblay.pro
 paginate:            1
 baseurl:             ""
