--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ tagline:             My thoughts on the world and some useful things I learn dai
 url:                 http://blog.tremblay.pro
 paginate:            1
 baseurl:             ""
+analytics_id:        UA-75727912-1
 
 # Assets
 #
