--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+# Dependencies
+markdown:         redcarpet
+highlighter:      rouge
+
 # Permalinks
 permalink:           pretty
 
@@ -5,16 +9,9 @@ permalink:           pretty
 title:               Henri's Mind
 tagline:             My thoughts on the world and some useful things I learn daily
 url:                 http://blog.tremblay.pro
-paginate:            1
-baseurl:             ""
+paginate:            5
+baseurl:             "/"
 analytics_id:        UA-75727912-1
-
-# Assets
-#
-# We specify the directory for Jekyll so we can use @imports.
-sass:
-  sass_dir:          _sass
-  style:            :compressed
 
 # About/contact
 author:
