Ignore node_modules

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
 
 # Do not build vendor pages (https://github.com/jekyll/jekyll/issues/2938)
 # Exclude build stuff
-exclude: [vendor, Gemfile, Gemfile.lock, Gruntfile.js, package.json, README.md]
+exclude: [vendor, Gemfile, Gemfile.lock, Gruntfile.js, package.json, README.md, node_modules]
 
 # Custom vars
 version: 2.0.0
