--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rvm:
   - 2.4
 script:
   - bundle exec jekyll build
-  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html
+  # Oracle tends to return a 403 so we ignore it
+  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html --url-ignore "--url-ignore "/oracle.com/"
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
