--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 script:
   - bundle exec jekyll build
   # Oracle tends to return a 403 so we ignore it
-  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html --url-ignore "--url-ignore "/oracle.com/"
+  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html --url-ignore --url-ignore "/oracle.com/"
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
